Added get/set attribute example. Also changed attribute to snake case since attributes are not supposed to contain any uppercase.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         <div id="someId">div 1</div>
         <div class="someClass">div 2</div>
-        <div data-someAttr="someString">div 3</div>
+        <div data-some-attr="someString">div 3</div>
 
         First line<br>
         Second line<br>
