More rewriting plain.js as vanilla/*.html micro examples.

--- a/vanilla/c_if.html
+++ b/vanilla/c_if.html
@@ -8,10 +8,10 @@ Remember to open the console.
 	let n = 1;
 	let s = '';
 
-	//if n is 1, do something.
+	//if n is 1, console.log()
     if (n === 1) console.log(n + ' exactly equals 1');
 
-	//if n is 1, do something(s) otherwise do something(s) else.
+	//if n is 1, console.log() otherwise other console.log().
     if (n === 1) {
         console.log(n + ' exactly equals 1');
     } else {
@@ -21,7 +21,7 @@ Remember to open the console.
     //set s1 to 'yes' if n is 1 otherwise set it to 'no'.
     s = (n === 1)?'yes':'no';
 
-    //ternary if statements are commonly written on multiple lines to improve readability.
+    //commonly written on multiple lines to improve readability.
     s = (n === 2)
         ? n + ' exactly equals 2'
         : n + ' does not exactly equal 2';
