Tweaking and fixing some vanilla/*.html micro examples.

--- a/vanilla/c_if.html
+++ b/vanilla/c_if.html
@@ -1,9 +1,9 @@
 Remember to open the console.
 
 <script>
-	//-------------------------------------------------
-	// Standard if statements and ternary if statement.
-	//-------------------------------------------------
+	//--------------------------------------------------
+	// Standard if statements and ternary if statements.
+	//--------------------------------------------------
 
 	let n = 1;
 	let s = '';
