--- a/vanilla/d_for.html
+++ b/vanilla/d_for.html
@@ -1,17 +1,17 @@
 Remember to open the console.
 
 <script>
-	//-------------------------------------------------
-	// Use for to loop over all items in an array.
-	//-------------------------------------------------
+	//-----------------------------------------
+	// Using for loops with arrays and objects.
+	//-----------------------------------------
 
 	let list = ['A', 'B', 'C'];
 
 	//for each item in list, console.log() it
-    for (let index = 0; index < list.length; index++) {
+	for (let index = 0; index < list.length; index++) {
         console.log(list[index]);
     }
-
+	
 	//for each item in list, console.log() it
     for (let index in list) {
         console.log(list[index]);
@@ -23,12 +23,12 @@ Remember to open the console.
 	}
 
 	let object = {
-		key1: 10,
-		key2: 20,
+		key1: 'value1',
+		key2: 'value2',
 	};
 
-	//for each key in object, console.log() it
-    for (let k in object) {
-        console.log(object[k]);
+	//for each key in object, console.log() the value
+    for (let key in object) {
+        console.log(object[key]);
     }
 </script>
