Tweaked a comment in the promises example.

--- a/vanilla/g_promises.html
+++ b/vanilla/g_promises.html
@@ -33,7 +33,7 @@ Remember to open the console.
 		.then(() => alert('Set'))
 		.then(() => alert('Go'));
 
-	//wait for all 3 thens to run and then console.log
+	//wait for all 3 thens to run and then console.log()
 	goPromise.then(() => console.log('Going'));
 
 	//console.log() without waiting for goPromise
