Tweaking debugger example.

--- a/vanilla/z_debugger.html
+++ b/vanilla/z_debugger.html
@@ -4,7 +4,6 @@ Remember to open the console.<br/>
 	<li>Notice that reaching the debugger; switches you from Console tab to Sources tab.</li>
 	<li>Press the step over <img src="../images/over.png"></img> button to execute just the current line.</li>
 	<li>Press the play <img src="../images/play.png"></img> button to continue until the end (or a breakpoint) is reached.</li>
-	<li>Click <a href="https://javascript.info/debugging-chrome">here</a> to learn a lot more about the debugger.</li>
 </ol>
 <hr/>
 <p>
@@ -20,6 +19,8 @@ Remember to open the console.<br/>
 	<br/>
 	<img src="../images/scope.png"></img><br/>
 </p>
+<hr/>
+<p>Click <a href="https://javascript.info/debugging-chrome">here</a> to learn a lot more about the debugger.</p>
 
 <script>
 	//---------------------------------------------------------
