Tweak to dialogBoxes.html title comment.

--- a/vanilla/z_dialogBoxes.html
+++ b/vanilla/z_dialogBoxes.html
@@ -1,9 +1,9 @@
 Remember to open the console.
 
 <script>
-	//-------------------------------------------
-	// Using dialog boxes and getting user input.
-	//-------------------------------------------
+	//-----------------------------------------------------
+	// Using dialog boxes and using them to get user input.
+	//-----------------------------------------------------
 
 	alert('I say!');
 	const booleanAnswer = confirm('Yes or no?');
