Minor tweak to html example.

--- a/dom/a_html.html
+++ b/dom/a_html.html
@@ -8,8 +8,7 @@
 		<br/> <!-- line <br>eak -->
 
 		<script>
-			let allSpans = document.querySelectorAll('span');
-			console.log(allSpans);
+			console.log('script running');
 		</script>
 	</body>
 </html>
