Added a 'Next' link to vanilla/a through vanilla/g and added vanilla/_start.html file.

--- a/vanilla/a_console.html
+++ b/vanilla/a_console.html
@@ -1,5 +1,3 @@
-<p>Open this file in a browser (ideally google chrome).</p>
-
 Open the console:<br/>
 <ol>
 	<li>Right click the page</li>
@@ -7,6 +5,8 @@ Open the console:<br/>
 	<li>Click the "Console" tab</li>
 	<li>It will say "This is a console.log() message."</li>
 </ol>
+
+<p><a href="b_values.html">Next</a></p>
 
 <script>
 	//-------------------------------------------------------
