--- a/vanilla/b_values.html
+++ b/vanilla/b_values.html
@@ -1,5 +1,7 @@
 Remember to open the console.
 
+<p><a href="c_if.html">Next</a></p>
+
 <script>
 	//-----------------------------------------------------
 	// How to create and set a variable of each value type.
