--- a/vanilla/c_if.html
+++ b/vanilla/c_if.html
@@ -1,5 +1,7 @@
 Remember to open the console.
 
+<p><a href="d_for.html">Next</a></p>
+
 <script>
 	//--------------------------------------------------
 	// Standard if statements and ternary if statements.
