--- a/vanilla/d_for.html
+++ b/vanilla/d_for.html
@@ -1,5 +1,7 @@
 Remember to open the console.
 
+<p><a href="e_functions.html">Next</a></p>
+
 <script>
 	//-----------------------------------------
 	// Using for loops with arrays and objects.
