--- a/vanilla/e_functions.html
+++ b/vanilla/e_functions.html
@@ -1,5 +1,7 @@
 Remember to open the console.
 
+<p><a href="f_class.html">Next</a></p>
+
 <script>
 	//--------------------------------
 	// Defining and running functions.
