--- a/vanilla/f_class.html
+++ b/vanilla/f_class.html
@@ -1,5 +1,7 @@
 Remember to open the console.
 
+<p><a href="g_promises.html">Next</a></p>
+
 <script>
 	//-----------------------------------------------------------------------------------
 	// Define a class, create instances of the class, and run methods on those instances.
