Made README.md a little more clear on where the public description ends and my notes begin. Also fixed a couple things for heroku deploy.

--- a/code/index.html
+++ b/code/index.html
@@ -1,35 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="js/dom.js"></script>
-        <link rel="stylesheet" href="css/style.css">
+        <title>_patterns</title>
     </head>
     <body>
-        <input type="text" value="someText1">
-        <textarea>someText2</textarea>
-
-        <button>Go</button>
-        <button>Go</button>
-
-        <div id="someId">div 1</div>
-        <div class="someClass">div 2</div>
-        <div data-some-attr="someString">div 3</div>
-
-        First line<br>
-        Second line<br>
-        Third line with <span>span 1</span> in it.<br>
-
-        <ul>
-            <li>list item 1</li>
-            <li>list item 2</li>
-        </ul>
-
-        <div id="changeMe">
-            will change
-        </div>
-
-        <div id="moveMe">
-            movable
-        </div>
+        Confused? See 
+        <a href="https://github.com/rockysims/_patterns/blob/master/README.md">
+            https://github.com/rockysims/_patterns/blob/master/README.md
+        </a>
     </body>
 </html>
