--- a/learningMaterial/code/vanilla/zz_debugger.html
+++ b/learningMaterial/code/vanilla/zz_debugger.html
@@ -2,22 +2,22 @@ Remember to open the console.<br/>
 <ol>
 	<li>Refresh the page.</li>
 	<li>Notice that reaching the debugger; switches you from Console tab to Sources tab.</li>
-	<li>Press the step over <img src="../images/over.png"></img> button to execute just the current line.</li>
-	<li>Press the play <img src="../images/play.png"></img> button to continue until the end (or a breakpoint) is reached.</li>
+	<li>Press the step over <img src="../../../images/over.png"></img> button to execute just the current line.</li>
+	<li>Press the play <img src="../../../images/play.png"></img> button to continue until the end (or a breakpoint) is reached.</li>
 </ol>
 <hr/>
 <p>
 	To un/set a breakpoint, click a line number.<br/>
 	<br/>
-	<img src="../images/breakpoint.png"></img><br/>
+	<img src="../../../images/breakpoint.png"></img><br/>
 	<br/>
-	Click play <img src="../images/play.png"></img> to continue execution until next breakpoint reached.<br/>
+	Click play <img src="../../../images/play.png"></img> to continue execution until next breakpoint reached.<br/>
 </p>
 <hr/>
 <p>
 	To see the current values of your variables, use Local and Script (under Scope).<br/>
 	<br/>
-	<img src="../images/scope.png"></img><br/>
+	<img src="../../../images/scope.png"></img><br/>
 </p>
 <hr/>
 <p>Click <a href="https://javascript.info/debugging-chrome">here</a> to learn a lot more about the debugger.</p>
