--- a/home.html
+++ b/home.html
@@ -8,5 +8,13 @@
         <a href="https://github.com/rockysims/_patterns/blob/master/README.md">
             https://github.com/rockysims/_patterns/blob/master/README.md
         </a>
+        <br/>
+        <br/>
+        <a href="learningMaterial/code/vanilla/_start.html">
+            learningMaterial/code/vanilla/_start.html
+        </a>
+        <a href="learningMaterial/code/vanilla/zz_debugger.html">
+            learningMaterial/code/vanilla/zz_debugger.html
+        </a>
     </body>
 </html>
